Fix spacing issue in nearby communities list

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -1943,6 +1943,9 @@ div.wysiwyg ul li {
     }
     .community #nearby-communities li a {
       display: block;
+      line-height: 1.5;
+      padding-top: 8px;
+      padding-bottom: 8px;
     }
     .community #about-bozzuto {
       width: 430px;
@@ -1998,9 +2001,6 @@ div.wysiwyg ul li {
     }
     .community #main-content .social-updates .byline {
       letter-spacing: 0;
-    }
-    .community #nearby-communities li a {
-      line-height: 3;
     }
     .community #sub-listing li a {
       font-size: 10px;
